--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 # IN THE SOFTWARE.
 
-mkdocs>=0.17
+#mkdocs>=1.0
+git://github.com/funkyfuture/mkdocs.git@toc_depth#egg=mkdocs
 pygments>=2.2
 pymdown-extensions>=3.4
